test/ClangImporter/import-as-member.code
// RUN: %empty-directory(%t.mcp)

// RUN: not %target-language-frontend(mock-sdk: %clang-importer-sdk) -enable-objc-interop -typecheck -F %S/Inputs/frameworks -I %S/Inputs/custom-modules -module-cache-path %t.mcp %s >%t.txt 2>&1
// RUN: %FileCheck %S/Inputs/custom-modules/ImportAsMember.h <%t.txt
// RUN: %FileCheck %S/Inputs/custom-modules/ImportAsMember_Private.h <%t.txt

// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -enable-objc-interop -typecheck -F %S/Inputs/frameworks -I %S/Inputs/custom-modules -module-cache-path %t.mcp %s -verify

import ImportAsMember
import ImportAsMember_Private
import ImportAsMemberSubmodules

immutable _: IAMSOuter.Inner?
immutable _: IAMMultipleNested.Inner? // expected-error {{ambiguous type name 'Inner' in 'IAMMultipleNested'}}

fn testCreateShadowing(d: Double) -> Struct1 {
  return Struct1(x: d, y: d, z: d)
}
